--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1&amp;f[]=array@400&amp;display=swap" rel="stylesheet">
     <title>jayson here xd</title>
     <meta property="og:title" content="jaysons.lol" />
-    <meta property="og:description" content="jayson owns thissssssssssss" />
+<meta property="og:description" content="zuriins &amp; 4zuriins | i love my baby nikki 💘" />
    <script disable-devtool-auto="" src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
 
     <style>
@@ -155,7 +155,7 @@
             </div>
             <h3 id="typingText" style="color: #ffffff;" class="profileBio"></h3>
             <i>
-                <div id="typingTexts" style="display: none;">discord.gg/stupid & and tiktok: zxdd.p</div>
+               <div id="typingTexts" style="display: none;">discord.gg/stupid &amp; tiktok: zxdd.p</div>
             </i>
             <script src="/assets/js/typing.js"></script>
         </div>
@@ -207,7 +207,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
             <path fill="currentColor" d="M12 9a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3m0 8a5 5 0 0 1-5-5a5 5 0 0 1 5-5a5 5 0 0 1 5 5a5 5 0 0 1-5 5m0-12.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5"></path>
         </svg>
-        <span id="profileViews">10,811</span>
+        <span id="profileViews">14,122</span>
     </span>
     <div class="tooltip" style="display:none;position: absolute;background: white;color: black;padding: 5px;border-radius: 3px;font-size: 12px;">Profile Views</div>
 </div>
