--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             <h3 id="typingText" style="color: #ffffff;" class="profileBio"></h3>
             <i>
-               <div id="typingTexts" style="display: none;">discord.gg/stupid &amp; tiktok: zxdd.p</div>
+               <div id="typingTexts" style="display: none;">discord.gg/stupid | tiktok: zxdd.p</div>
             </i>
             <script src="/assets/js/typing.js"></script>
         </div>
