--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
    <div class="overlay" id="overlay">
-        <div class="proceed-button" onclick="removeOverlay(), playaudio()">Click to enter</div>
+        <div class="proceed-button" onclick="removeOverlay(), body.classList.remove('blurred'), playaudio()">Click to enter</div>
     </div>
 
     <div class="blurred-box">
