--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
  .static-text {
             font-size: 1.5rem;
             color: white;
+            bottom: 90px;
             margin-top: 25px;
             height: 40px;
             overflow: hidden;
