--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
+        .profileBio {
+            font-size: 1.5rem;
+            color: white;
+            bottom: 115px;
+            margin-top: 25px;
+            height: 40px;
+            overflow: hidden;
+            border-right: 2px solid;
+            white-space: nowrap;
+            letter-spacing: 2px;
+        }
+
         .blurred-box {
             display: none;
         }
