--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body class="blurred">
-    <div class="background" style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-image: url('ref/misc/newbackground.gif'); background-size: cover; background-position: center;"></div>
+    <div class="background" style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-image: url('ref/misc/backgroundgif.gif'); background-size: cover; background-position: center;"></div>
     
    <div class="overlay" id="overlay" onclick="removeOverlay(), playaudio()">
         <div class="proceed-button">Click to enter</div>
