--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="@jayson" />
-    <meta property="og:description" content="the world is yours | i love nikki" />
-    <meta property="og:image" content="https://cdn.discordapp.com/avatars/693658646634037299/efe4781b5048dda019f026c1b9d61953.webp?size=1024&format=webp&width=0&height=256" />
+    <meta property="og:title" content="@jayson - 🤷‍♂️" />
+    <meta property="og:description" content="the world is yours" />
+    <meta property="og:image" content="https://jaysons.lol/ref/misc/batman.png" />
     <meta property="og:url" content="https://jaysons.lol" />
     <meta property="theme-color" content="#1b1b1b">
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
@@ -146,8 +146,8 @@
         }
         
         const phrases = [
-            "i love nikki soo much",
-            "discord.gg/jayson thx",
+            "follow my instagram & roblox",
+            "discord.gg/jayson",
             "the world is yours"
         ];
         let phraseIndex = 0;
