--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="static-text" id="dynamic-text"></div>
         <div class="icon-wrapper">
-            <a href="https://www.instagram.com/jaysons.lol/?hl=en" class="icon-button" target="_blank">
+            <a href="https://www.instagram.com/jaysons.lol" class="icon-button" target="_blank">
                 <i class="fa-brands fa-square-instagram"></i>
             </a>
             <a href="https://www.roblox.com/users/3290769146/profile" class="icon-button" target="_blank">
