--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="static-text" id="dynamic-text"></div>
         <div class="icon-wrapper">
             <a href="https://www.instagram.com/jaysons.lol" class="icon-button" target="_blank">
-                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fab fa-instagram"></i>
             </a>
             <a href="https://www.roblox.com/users/3290769146/profile" class="icon-button" target="_blank">
                 <i class="fas fa-globe"></i>
