--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <a href="https://discord.gg/stupid" class="icon-button" target="_blank">
                 <i class="fab fa-discord"></i>
             </a>
-            <a href="https://www.tiktok.com/@umjaysonn" class="icon-button" target="_blank">
+            <a href="https://www.tiktok.com/@umjayson" class="icon-button" target="_blank">
                 <i class="fab fa-tiktok"></i>
             </a>
         </div>
