--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="ref/js/bettersnow.js"></script>
     <script src="ref/js/ZOOOOOOOOM.js"></script>
     <title>@jayson</title>
+    <link rel="icon" href="/ref/misc/batmanimage.png" type="image/x-icon">
     <link rel="stylesheet" href="ref/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
