--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="background" style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-image: url('ref/misc/backgroundgif.gif'); background-size: cover; background-position: center;"></div>
     
    <div class="overlay" id="overlay" onclick="removeOverlay(), playaudio()">
-        <div class="proceed-button" id="proceedButton">Click to enter</div>
+        <div class="proceed-button" id="proceedButton">click</div>
     </div>
     
     <div class="blurred-box">
