--- a/index.html
+++ b/index.html
@@ -9,15 +9,84 @@
     <meta property="og:image" content="https://jaysons.lol/ref/misc/batman.png" />
     <meta property="og:url" content="https://jaysons.lol" />
     <meta property="theme-color" content="#1b1b1b">
+    <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
+    <script src="ref/js/sexymouse.js"></script>
+    <script src="ref/js/bettersnow.js"></script>
+    <script src="ref/js/ZOOOOOOOOM.js"></script>
     <title>@jayson</title>
+    <link rel="icon" href="/ref/misc/batmanimage.png" type="image/x-icon">
     <link rel="stylesheet" href="ref/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
+        .static-text {
+            font-size: 1.5rem;
+            color: white;
+            bottom: 115px;
+            margin-top: 25px;
+            height: 40px;
+            overflow: hidden;
+            border-right: 2px solid;
+            white-space: nowrap;
+            letter-spacing: 2px;
+            animation: blink-caret 0.75s step-end infinite;
+            opacity: 1;
+            transition: opacity 1s ease;
+        }
+
+        @keyframes typing {
+            from { width: 0 }
+            to { width: 100% }
+        }
+
+        @keyframes blink-caret {
+            from, to { border-color: transparent }
+            50% { border-color: white }
+        }
+
+        .blurred-box {
+            opacity: 0;
+            transition: opacity 1.5s ease;
+        }
+
+        .fade-in {
+            opacity: 1;
+        }
+
+        #overlay {
+            opacity: 1;
+            transition: opacity 1s ease;
+        }
+
+        .fade-out {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        .background {
+            filter: blur(8px);
+            transition: filter 1.5s ease;
+        }
+
+        .unblurred {
+            filter: blur(0);
+        }
+
+        .proceed-button {
+            opacity: 1;
+            transition: opacity 1s ease;
+            pointer-events: auto;
+        }
+
+        .hide-proceed {
+            opacity: 0;
+            pointer-events: none;
+        }
+
         .volume-control {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
+            top: 20px;
+            left: 20px;
             display: flex;
             align-items: center;
             gap: 10px;
@@ -62,9 +131,44 @@
     </style>
 </head>
 
-<body>
-    <div class="overlay" id="overlay" onclick="handleEnter()">
+<body class="blurred">
+    <div class="background" style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-image: url('ref/misc/backgroundgif.gif'); background-size: cover; background-position: center;"></div>
+    
+   <div class="overlay" id="overlay" onclick="handleEnter()">
         <div class="proceed-button" id="proceedButton">click</div>
+    </div>
+    
+    <div class="blurred-box">
+        <div class="profile-wrapper">
+            <div class="profile-decoration"></div>
+            <div class="profile-picture"></div>
+        </div>
+        <div class="profile-name">jayson</div>
+        <div class="showcase">
+            <div class="badge">
+                <i class="fas fa-gun"></i>
+                <span class="tooltip">Thug</span>
+            </div>
+            <div class="badge">
+                <i class="fa-solid fa-star" style="color: white;"></i>
+                <span class="tooltip">Certified</span>
+            </div>
+        </div>
+        <div class="static-text" id="dynamic-text"></div>
+        <div class="icon-wrapper">
+            <a href="https://www.instagram.com/jaysons.lol" class="icon-button" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.roblox.com/users/3290769146/profile" class="icon-button" target="_blank">
+                <i class="fas fa-globe"></i>
+            </a>
+            <a href="https://discord.gg/stupid" class="icon-button" target="_blank">
+                <i class="fab fa-discord"></i>
+            </a>
+            <a href="https://www.tiktok.com/@umjayson" class="icon-button" target="_blank">
+                <i class="fab fa-tiktok"></i>
+            </a>
+        </div>
     </div>
 
     <div class="volume-control">
@@ -84,11 +188,16 @@
             hasClicked = true;
 
             const overlay = document.getElementById('overlay');
+            const background = document.querySelector('.background');
+            const blurredBox = document.querySelector('.blurred-box');
             const proceedButton = document.getElementById('proceedButton');
 
             proceedButton.classList.add('hide-proceed');
+            background.classList.add('unblurred');
+
             setTimeout(() => {
-                overlay.style.display = 'none';
+                overlay.classList.add('fade-out');
+                blurredBox.classList.add('fade-in');
             }, 1000);
 
             playAudioSequence();
@@ -108,6 +217,7 @@
             });
         }
 
+        // Volume Controls
         const volumeButton = document.getElementById('volumeButton');
         const volumeSlider = document.getElementById('volumeSlider');
 
@@ -118,8 +228,10 @@
 
         volumeSlider.addEventListener('input', (e) => {
             const volume = parseFloat(e.target.value);
-            audio1.volume = volume;
-            audio2.volume = volume;
+            if (!isMuted) {
+                audio1.volume = volume;
+                audio2.volume = volume;
+            }
         });
 
         function updateVolumeState() {
