--- a/index.html
+++ b/index.html
@@ -84,70 +84,81 @@
       50%      { border-color: white; }
     }
 
-    /* Volume control container:
-       - pinned top-left
-       - starts at width: 40px (only icon visible)
-       - expands to width: 140px on hover for the slider to appear
-     */
+    /* Volume control container */
     .volume-control-blurred {
       position: fixed;
       top: 20px;
       left: 20px;
       z-index: 100;
 
+      /* Start as a 40×40 box for the icon */
       width: 40px;
       height: 40px;
-      display: none; /* shown after "click to enter" */
+      display: none; /* hidden until "click to enter" */
 
+      /* Blurred background styling */
       background: rgba(255, 255, 255, 0.075);
       backdrop-filter: blur(10px);
       border-radius: 15px;
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       border: 1px solid rgba(255, 255, 255, 0);
 
-      /* Use flex so the icon & slider can align horizontally */
-      display: flex;
-      align-items: center;
-      justify-content: flex-start; /* icon stays left */
-
-      transition: width 0.3s ease;
-      overflow: hidden; /* hide the slider when collapsed */
-    }
-    .volume-control-blurred:hover {
-      width: 140px;
-    }
-
-    /* Icon container (40x40) so it doesn't move */
-    .icon-container {
-      width: 40px;
-      height: 40px;
+      /* Center the icon */
       display: flex;
       align-items: center;
       justify-content: center;
+
+      /* We'll allow overflow so the slider can appear outside if needed */
+      overflow: visible;
     }
+
+    /* The volume icon, centered in the 40×40 container */
     .volume-button {
       font-size: 1.2rem;
       color: white;
       cursor: pointer;
+      z-index: 2; /* Keep above slider container */
     }
 
-    /* Slider container: collapsed by default, expands on hover */
+    /* The slider container that appears on hover, offset to the right */
     .slider-container {
-      width: 0;
-      transition: width 0.3s ease, opacity 0.3s ease;
-      opacity: 0;
-      display: flex; /* horizontal layout for the slider */
+      position: absolute;
+      left: 50px; /* just to the right of the icon container */
+      top: 0;
+      bottom: 0;
+      margin: auto 0; /* center it vertically relative to the parent */
+
+      width: 80px;
+      height: 40px;
+      display: flex;
       align-items: center;
-      margin-left: 5px; /* small space from the icon container */
+      justify-content: center;
+
+      /* Blurred background for the slider, matching the icon container */
+      background: rgba(255, 255, 255, 0.075);
+      backdrop-filter: blur(10px);
+      border-radius: 10px;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0);
+
+      /* hidden/ collapsed by default (scaleX(0)) */
+      opacity: 0;
+      transform: scaleX(0);
+      transform-origin: left center;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+      pointer-events: none; /* can't interact when hidden */
     }
+
+    /* On hover, the slider container becomes visible */
     .volume-control-blurred:hover .slider-container {
-      width: 80px; /* expand for the slider range */
       opacity: 1;
+      transform: scaleX(1);
+      pointer-events: auto;
     }
 
     /* Actual slider styling: white track + white thumb (dot) */
     .volume-slider {
-      width: 100%;
+      width: 70%;
       appearance: none;
       outline: none;
       cursor: pointer;
@@ -254,9 +265,10 @@
 
   <!-- Volume Control Blurred Box (initially hidden) -->
   <div class="volume-control-blurred" id="volumeControl">
-    <div class="icon-container">
-      <i class="fas fa-volume-up volume-button" id="volumeButton"></i>
-    </div>
+    <!-- Volume Icon in Center -->
+    <i class="fas fa-volume-up volume-button" id="volumeButton"></i>
+
+    <!-- Slider container expands on hover -->
     <div class="slider-container">
       <!-- Max volume is 0.5 -->
       <input
@@ -277,7 +289,7 @@
     // For toggling the volume button
     let isMuted = false;
 
-    // We remember the last non-zero volume to allow quick toggle back
+    // We remember the last non-zero volume
     let lastVolume = 0.5;
 
     let audio1, audio2;
@@ -329,7 +341,7 @@
     volumeButton.addEventListener('click', () => {
       // Toggle muted state
       if (!isMuted) {
-        // We're muting, so remember the last volume and set slider to 0
+        // Mute: remember lastVolume, set slider to 0
         lastVolume = parseFloat(volumeSlider.value);
         volumeSlider.value = 0;
         audio1.volume = 0;
@@ -337,7 +349,7 @@
         isMuted = true;
         volumeButton.classList.replace('fa-volume-up', 'fa-volume-mute');
       } else {
-        // We're unmuting, restore lastVolume
+        // Unmute: restore lastVolume
         volumeSlider.value = lastVolume.toString();
         audio1.volume = lastVolume;
         audio2.volume = lastVolume;
@@ -349,19 +361,19 @@
     volumeSlider.addEventListener('input', (e) => {
       const volume = parseFloat(e.target.value);
 
-      // If the user is dragging to 0, we become muted
+      // If the user drags to 0, auto-mute
       if (volume === 0) {
         isMuted = true;
         volumeButton.classList.replace('fa-volume-up', 'fa-volume-mute');
         audio1.volume = 0;
         audio2.volume = 0;
       } else {
-        // Unmute automatically if volume > 0
+        // Above 0 => unmute
         isMuted = false;
         volumeButton.classList.replace('fa-volume-mute', 'fa-volume-up');
         audio1.volume = volume;
         audio2.volume = volume;
-        lastVolume = volume; // update lastVolume
+        lastVolume = volume;
       }
     });
 
